# AN-BME280-IG

./: LICENSE  README.rst
Android/: LICENSE  README.rst
Android/lib/: simplemcp2221a-debug.aar
Android/libs/: artifactnoise-bme280-release.aar
Python/example/: BME280_csv.py  BME280_test.py  CSVtoPlot.py
Python/example/PyMCP2221A/: PyMCP2221A.py
ros/env_measurement_module/: CMakeLists.txt  README.md  package.xml  setup.py
ros/env_measurement_module/launch/: env_measurement.launch
ros/env_measurement_module/scripts/: run_env_measurement.py
ros/env_measurement_module/src/env_measurement_module/: BME280.py  PyMCP2221A.py  SMBus.py  __init__.py
