<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>env_measurement_module</name>
  <version>0.0.0</version>
  <description>The env_measurement_module package</description>
  <maintainer email="mikhail.bertrand@gmail.com">MikhailBertrand</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <export>
  </export>
</package>
